added call history section

--- a/index.html
+++ b/index.html
@@ -234,7 +234,30 @@
             </div>
         </section>
         
-        
+        <aside class="shadow-md  md:col-span-3 p-6  call-history bg-white  rounded-[12px]">
+            <div class="flex justify-between mb-4">
+                <p class="text-[20px] font-medium"> <i class="fa-regular fa-clock text-[#5C5C5C]"></i> Call History</p>
+                <button class="btn  bg-[#00A63E] border-none text-white rounded-[50px]"> Clear</button>
+            </div>
+            <div class="history flex justify-between items-center bg-[#fafafa] p-4 rounded-[8px] mb-2">
+                <div>
+                    <h2 class="font-semibold text-[18px] ">Fire Service Number</h2>
+                    <p class="text-[#5c5c5c] text-[18px]  ">999</p>
+                </div>
+                <div>
+                    <p>11:36:58 AM</p>
+                </div>
+            </div>
+            <div class="history flex justify-between items-center bg-[#fafafa] p-4 rounded-[8px] mb-2">
+                <div>
+                    <h2 class="font-semibold text-[18px] ">Ambulance Service</h2>
+                    <p class="text-[#5c5c5c] text-[18px]  ">1994-999999</p>
+                </div>
+                <div>
+                    <p>11:36:58 AM</p>
+                </div>
+            </div>
+        </aside> 
     </main>
 
     <script src="emergency.js"></script>
