--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </head>
 <body class="hind-madurai bg-[#41ff6b1a] ">
     <header >
-            <div class="flex justify-between px-[60px] py-6 bg-white">
-                <div class="flex items-center gap-[10px]">
+            <div class="md:flex  justify-between items-center px-[60px] py-6 bg-white">
+                <div class="flex  items-center gap-[10px]">
                 <img class="h-[50px] w-[50px]" src="assets/logo.png" alt="">
                 <h1 class="text-[#006747] font-black text-[20px]">Emergency <br> Service </h1>
                 </div>
-                <div class=" flex gap-5 nav-btn">
+                <div class=" flex gap-5 mt-5 md:mt-0 nav-btn">
                 <div class="w-[120px] h-[50px] rounded-[50px] bg-[#41ff6b1a] flex justify-center items-center gap-[10px] ">
                     <p id="heart-icon-number" class="font-black text-base"> 0  </p>
                     <img class="h-[24px] w-[24px]"src="assets/heart.png" alt="">
@@ -38,7 +38,7 @@
                     <p id="coin-balance" class="font-black text-base">100</p>
                     <img class="h-[24px] w-[24px]" src="assets/coin.png" alt="">
                 </div>
-                <div class="w-[120px] h-[50px] rounded-[50px] bg-[#00A63E] flex justify-center items-center "> <p class="font-semibold text-base text-white"><span>0</span> Copy</p></div>
+                <div class="w-[120px] h-[50px] rounded-[50px] bg-[#00A63E] flex justify-center items-center "> <p class="font-semibold text-base text-white"><span id="copy-count">0</span> Copy</p></div>
             </div>
         </div>
 
@@ -64,11 +64,11 @@
                 <div class="headline">
                     <h2 class="font-bold text-[24px]" >National Emergency Number</h2>
                     <p class="text-[#5C5C5C] text-[18px]">National Emergency </p>
-                    <h1 class="font-bold text-[32px] mt-6">999</h1>
+                    <h1 id="copy-number" class="font-bold text-[32px] mt-6">999</h1>
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">All</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
@@ -88,8 +88,8 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Police</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
-                    <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
+                    <button class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button  class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
             <div class="shadow-md card-section p-8 bg-white rounded-[12px]">
@@ -108,7 +108,7 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Fire</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Health</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
@@ -148,8 +148,8 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Help</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
-                    <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
+                    <button  class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button  class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
             <div class="shadow-md card-section p-8 bg-white rounded-[12px]">
@@ -168,8 +168,8 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Govt.</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
-                    <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
+                    <button class="copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button  class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
             <div class="shadow-md card-section p-8 bg-white rounded-[12px]">
@@ -188,7 +188,7 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Electricity</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button  class=" copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">NGO</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button  class=" copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
@@ -228,13 +228,13 @@
                     <button class=" mb-6 bg-[#F2F2F2] btn text-[#5C5C5C] text-[18px] rounded-[9999px] border-none">Travel</button>
                 </div>
                 <div class="card-btn flex gap-2">
-                    <button class="btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class=" copy-button btn w-[50%] bg-white border-[#D4D6D5] text-[#5C5C5C] rounded-[8px] "><i class="fa-regular fa-copy"></i>Copy</button>
                     <button class="helpline-call-btn btn w-[50%] bg-[#00A63E] border-none text-white rounded-[8px] "> <i class="fa-solid fa-phone"></i>Call</button>
                 </div>
             </div>
         </section>
         
-        <aside class="shadow-md  md:col-span-3 p-6   bg-white  rounded-[12px]">
+        <aside class="shadow-md  md:col-span-3 p-6 col-span-9  bg-white  rounded-[12px]">
            <div >
                 <div  >
                     <div class="flex justify-between mb-4">
